--- a/solana-snapshot-etl/Cargo.toml
+++ b/solana-snapshot-etl/Cargo.toml
@@ -39,6 +39,7 @@ solana-program = { version = "=1.16.15", optional = true }
 solana_rbpf = { version = "0.7.2", optional = true }
 spl-token = { version = "4.0.0", optional = true }
 json5 = { version = "0.4.1", optional = true }
+duckdb = { version = "1.0", optional = true }
 
 [features]
 parallel = []
@@ -46,6 +47,7 @@ standalone = [
     "borsh",
     "crossbeam",
     "csv",
+    "duckdb",
     "env_logger",
     "indicatif",
     "num_cpus",
