--- a/solana-snapshot-etl/Cargo.toml
+++ b/solana-snapshot-etl/Cargo.toml
@@ -39,7 +39,7 @@ solana-program = { version = "=1.16.15", optional = true }
 solana_rbpf = { version = "0.7.2", optional = true }
 spl-token = { version = "4.0.0", optional = true }
 json5 = { version = "0.4.1", optional = true }
-duckdb = { version = "1.0", optional = true }
+duckdb = { version = "1.0", optional = true, features = ["bundled"] }
 
 [features]
 parallel = []
