--- a/solana-snapshot-etl/Cargo.toml
+++ b/solana-snapshot-etl/Cargo.toml
@@ -34,6 +34,7 @@ num_cpus = { version = "1.13.1", optional = true }
 reqwest = { version = "0.11.11", features = ["blocking"], optional = true }
 rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
 serde_json = { version = "1.0.82", optional = true }
+wincode = { version = "0.2.5", optional = true, features = ["derive"] }
 solana-geyser-plugin-interface = { version = "=1.16.15", optional = true }
 solana-program = { version = "=1.16.15", optional = true }
 solana_rbpf = { version = "0.7.2", optional = true }
@@ -58,6 +59,7 @@ standalone = [
     "solana-program",
     "spl-token",
     "json5",
+    "wincode",
 ]
 
 [[bin]]
